LPS-98886 Build Lang

--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ar.properties
@@ -12,9 +12,12 @@ contributor.context=جلسة العمل
 contributor.user=مستخدم
 contributor.user-organization=المنظمة
 create-new-test=إنشاء اختبار جديد (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=إنشاء اختبار (Automatic Translation)
 create-test-error=حدث خطأ غير متوقع أثناء إنشاء اختبار A/B. (Automatic Translation)
 create-test-help-message=إنشاء اختبار A/B جديد لتحسين الصفحة أو التجربة. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=المعيار
 criteria-cancel-confirmation-message=هناك تغييرات لم يتم حفظها. هل أنت متأكد أنك تريد الخروج؟ (Automatic Translation)
 criteria-error-message-edit=احذف هذا الشرط. لقد تم إنشاؤه من حقل مخصص لم يعد موجودًا.
@@ -82,6 +85,7 @@ new-x-segment={0} مقطع (مقاطع) جديدة
 no-active-tests-were-found-for-the-selected-experience=لم يتم العثور على اختبارات نشطة للتجربة المحددة. (Automatic Translation)
 no-segments-have-been-added-yet=لم تتم إضافة المقاطع بعد. لإضافة مقطع جديد اذهب إلى قائمة المنتجات > الأشخاص > المقاطع.
 no-users-have-been-assigned-to-this-segment=لم يتم تعيين أي مستخدمين لهذه التجزئة.
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=لا يحتوي على
 not-equals=لا يساوي
 preview-members=معاينة الأعضاء
@@ -93,6 +97,7 @@ segments=الأجزاء
 segments-asah-connector-configuration-name=سحابة تحليلات الأجزاء
 segments-service-configuration-name=خدمة المقاطع
 select-experience=اختر التجربة (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=سحابة التحليلات
 source.dxp=DXP
 test-name=اسم الاختبار (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=تعذر العثور على التجزئة.
 there-are-no-segments=لا توجد أجزاء.
 untitled-segment=مقطع بدون عنوان
 user-segment=مقطع المستخدم
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} عضو
 x-members={0} أعضاء
 x-properties={0} خصائص
