--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ca.properties
@@ -12,9 +12,12 @@ contributor.context=Sessió
 contributor.user=Usuari
 contributor.user-organization=Organització
 create-new-test=Crea prova nova
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Crea una prova
 create-test-error=S'ha produït un error inesperat en crear la prova A/B. (Automatic Translation)
 create-test-help-message=Crea una nova prova a/B per optimitzar la teva pàgina o experiència. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Criteris
 criteria-cancel-confirmation-message=Hi ha canvis sense desar. Segur que voleu sortir?
 criteria-error-message-edit=Suprimiu aquesta condició. S'ha creat a partir d'un camp personalitzat que ja no existeix.
@@ -82,6 +85,7 @@ new-x-segment=Nou {0} segment
 no-active-tests-were-found-for-the-selected-experience=No s'han trobat proves actives per a l'experiència seleccionada.
 no-segments-have-been-added-yet=Encara no s'ha afegit cap segment. Per afegir un segment nou aneu a Menú de producte > Persones > Segments.
 no-users-have-been-assigned-to-this-segment=No s'ha assignat cap usuari a aquest segment.
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=No conté
 not-equals=No iguals
 preview-members=Previsualitza els membres
@@ -93,6 +97,7 @@ segments=Segments
 segments-asah-connector-configuration-name=Analytics Cloud de segments
 segments-service-configuration-name=Servei dels segments
 select-experience=Seleccioneu l'experiència
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud
 source.dxp=DXP
 test-name=Nom de la prova
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=No s'ha trobat el segment.
 there-are-no-segments=No hi ha cap segment.
 untitled-segment=Segment sense títol
 user-segment=Segment d'usuari
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} membre
 x-members={0} membres
 x-properties={0} propietats
