--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_cs.properties
@@ -12,9 +12,12 @@ contributor.context=Relace (Automatic Translation)
 contributor.user=Uživatel (Automatic Translation)
 contributor.user-organization=Organizace (Automatic Translation)
 create-new-test=Vytvořit nový test (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Vytvořit test (Automatic Translation)
 create-test-error=Při vytváření testu A/B došlo k neočekávané chybě. (Automatic Translation)
 create-test-help-message=Vytvořte nový test A/B pro optimalizaci stránky nebo zážitku. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Kritéria (Automatic Translation)
 criteria-cancel-confirmation-message=Existují neuložené změny. Opravdu chcete skončit? (Automatic Translation)
 criteria-error-message-edit=Odstraňte tuto podmínku. Byla vytvořena z vlastního pole, které již neexistuje. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Pro vybranou zkušenost nebyly zjištěny žádné aktivní testy. (Automatic Translation)
 no-segments-have-been-added-yet=Dosud nebyly přidány žádné segmenty. Chcete-li přidat nový segment, přejděte do nabídky produkt > lidé > segmenty. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Žádní uživatelé byly přiřazeny k tomuto segmentu. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Není obsahuje (Automatic Translation)
 not-equals=Není rovno (Automatic Translation)
 preview-members=Náhled členů (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Segmenty (Automatic Translation)
 segments-asah-connector-configuration-name=Segmenty shluku služby Analytics (Automatic Translation)
 segments-service-configuration-name=Segmenty služby (Automatic Translation)
 select-experience=Vybrat zkušenost (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Cloud služby Analytics (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Název testu (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Segment nelze nalézt. (Automatic Translation)
 there-are-no-segments=Neexistují žádné segmenty. (Automatic Translation)
 untitled-segment=Segment bez názvu (Automatic Translation)
 user-segment=Uživatelský Segment (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
