--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_en.properties
@@ -12,9 +12,12 @@ contributor.context=Session
 contributor.user=User
 contributor.user-organization=Organization
 create-new-test=Create New Test
+create-new-variant=Create New Variant
 create-test=Create Test
 create-test-error=An unexpected error occurred while creating the A/B test.
 create-test-help-message=Create a new A/B test to optimize your page or experience.
+create-variant=Create Variant
+create-variant-error-message=An unexpected error occurred while creating the variant.
 criteria=Criteria
 criteria-cancel-confirmation-message=There are unsaved changes. Are you sure you want to exit?
 criteria-error-message-edit=Delete this condition. It was created from a custom field that no longer exists.
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment
 no-active-tests-were-found-for-the-selected-experience=No active tests were found for the selected experience.
 no-segments-have-been-added-yet=No segments have been added yet. To add a new segment go to Product Menu > People > Segments.
 no-users-have-been-assigned-to-this-segment=No users have been assigned to this segment.
+no-variants-have-been-created-for-this-test=No variants have been created for this test.
 not-contains=Not Contains
 not-equals=Not Equals
 preview-members=Preview Members
@@ -93,6 +97,7 @@ segments=Segments
 segments-asah-connector-configuration-name=Segments Analytics Cloud
 segments-service-configuration-name=Segments Service
 select-experience=Select Experience
+show-actions=Show Actions
 source.analytics-cloud=Analytics Cloud
 source.dxp=DXP
 test-name=Test Name
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=The segment could not be found.
 there-are-no-segments=There are no segments.
 untitled-segment=Untitled Segment
 user-segment=User Segment
+variant-control=Control
+variants=Variants
+variants-help=Create at least one variant to run the test.
 x-member={0} Member
 x-members={0} Members
 x-properties={0} Properties
