--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_es.properties
@@ -12,9 +12,12 @@ contributor.context=Sesión
 contributor.user=Usuario
 contributor.user-organization=Organización
 create-new-test=Crear prueba
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Crear prueba
 create-test-error=Se ha producido un error inesperado al crear la prueba A/B. (Automatic Translation)
 create-test-help-message=Crea una nueva prueba A/B para optimizar tu página o experiencia. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Criterios
 criteria-cancel-confirmation-message=Hay cambios sin guardar. ¿Está seguro de que quiere salir?
 criteria-error-message-edit=Elimine esta condición, ya que se creó a partir de un campo personalizado que ya no existe.
@@ -82,6 +85,7 @@ new-x-segment=Nuevo segmento de {0}
 no-active-tests-were-found-for-the-selected-experience=No se encontraron pruebas activas para la experiencia seleccionada.
 no-segments-have-been-added-yet=Aún no se añadió ningún segmento. Para añadir un nuevo segmento, vaya al menú de productos > Personas > Segmentos.
 no-users-have-been-assigned-to-this-segment=No se asignaron usuarios a este segmento.
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=No contiene
 not-equals=No es igual a
 preview-members=Previsualizar miembros
@@ -93,6 +97,7 @@ segments=Segmentos
 segments-asah-connector-configuration-name=Nube de análisis de segmentos
 segments-service-configuration-name=Servicio de segmentos
 select-experience=Seleccionar experiencia
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud
 source.dxp=DXP
 test-name=Nombre de la prueba
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=No se encuentra el segmento.
 there-are-no-segments=No hay segmentos.
 untitled-segment=Segmento sin título
 user-segment=Segmento de usuarios
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} miembro
 x-members={0} miembros
 x-properties={0} propiedades
