--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fa.properties
@@ -12,9 +12,12 @@ contributor.context=جلسه
 contributor.user=کاربر
 contributor.user-organization=سازمان (Automatic Translation)
 create-new-test=ایجاد تست جدید (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=ایجاد آزمون (Automatic Translation)
 create-test-error=هنگام ایجاد آزمون A/B یک خطای غیرمنتظره رخ داد. (Automatic Translation)
 create-test-help-message=یک تست جدید A/B برای بهینه سازی صفحه یا تجربه خود ایجاد کنید. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=ضوابط
 criteria-cancel-confirmation-message=تغییرات ذخیره نشده وجود دارد. آیا مطمئنید که می خواهید خارج شوید ؟ (Automatic Translation)
 criteria-error-message-edit=این شرایط را حذف کنید. آن را از یک زمینه سفارشی است که دیگر وجود ندارد ایجاد شد. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=هیچ آزمون فعالی برای تجربه انتخاب شده پیدا نشد. (Automatic Translation)
 no-segments-have-been-added-yet=هنوز هیچ بخش اضافه نشده است. برای اضافه کردن یک بخش جدید به منوی محصولات > مردم > بخش. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=هیچ کاربری به این بخش اختصاص داده شده اند. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=شامل نیست (Automatic Translation)
 not-equals=برابر نیست
 preview-members=پیش نمایش اعضای (Automatic Translation)
@@ -93,6 +97,7 @@ segments=بخش ها
 segments-asah-connector-configuration-name=بخش تجزیه و تحلیل ابر (Automatic Translation)
 segments-service-configuration-name=بخش خدمات (Automatic Translation)
 select-experience=انتخاب تجربه (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=آنالیز ابر (Automatic Translation)
 source.dxp=DXP
 test-name=نام آزمون (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=بخش یافت نشد. (Automatic Translation)
 there-are-no-segments=هیچ قطعه ای وجود دارد. (Automatic Translation)
 untitled-segment=بخش بدون عنوان (Automatic Translation)
 user-segment=بخش کاربر (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} عضو
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
