--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fi.properties
@@ -12,9 +12,12 @@ contributor.context=Istunto
 contributor.user=Käyttäjä
 contributor.user-organization=Organisaatio
 create-new-test=Luo Uusi Testi
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Luo Testi
 create-test-error=An unexpected error occurred while creating the A/B test. (Automatic Copy)
 create-test-help-message=Create a new A/B test to optimize your page or experience. (Automatic Copy)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Perusteet
 criteria-cancel-confirmation-message=Kaikkia muutoksia ei ole tallennettu. Haluatko varmasti poistua?
 criteria-error-message-edit=Poista tämä ehto. Se luotiin mukautetusta kentästä, jota ei enää ole olemassa.
@@ -82,6 +85,7 @@ new-x-segment=Uusi {0} Segmentti
 no-active-tests-were-found-for-the-selected-experience=Aktiivisia testejä ei löytynyt valitulle kokeelle.
 no-segments-have-been-added-yet=Segmenttejä ei ole vielä lisätty. Lisätäksesi uuden segmentin siirry kohtaan Tuotevalikko > Ihmiset > Segmentit.
 no-users-have-been-assigned-to-this-segment=Käyttäjiä ei ole nimetty tähän segmenttiin.
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Ei Sisällä
 not-equals=Eri Suuri
 preview-members=Esikatsele Jäseniä
@@ -93,6 +97,7 @@ segments=Segmentit
 segments-asah-connector-configuration-name=Segmenttien Analytiikkapilvi
 segments-service-configuration-name=Segmenttien Palvelu
 select-experience=Valitse Kokemus
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics-pilvi
 source.dxp=DXP
 test-name=Testin Nimi
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Segmenttiä ei löytynyt.
 there-are-no-segments=Segmenttejä ei ole.
 untitled-segment=Nimetön Segmentti
 user-segment=Käyttäjäsegmentti
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Jäsen
 x-members={0} Jäsentä
 x-properties={0} Ominaisuutta
