--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_fr.properties
@@ -12,9 +12,12 @@ contributor.context=Session
 contributor.user=Utilisateur
 contributor.user-organization=Organisation
 create-new-test=Créer un nouveau test
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Créer un test
 create-test-error=Une erreur inattendue s'est produite lors de la création du test A/B. (Automatic Translation)
 create-test-help-message=Créez un nouveau test A/B pour optimiser votre page ou votre expérience. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Critère
 criteria-cancel-confirmation-message=Des modifications ne sont pas enregistrées. Voulez-vous vraiment quitter ?
 criteria-error-message-edit=Supprimer cette condition. Elle a été créée à partir d'un champ personnalisé qui n'existe plus.
@@ -82,6 +85,7 @@ new-x-segment=Nouveau segment {0}
 no-active-tests-were-found-for-the-selected-experience=Aucun test actif n'a été trouvé pour l'expérience sélectionnée. (Automatic Translation)
 no-segments-have-been-added-yet=Aucun segment n'a encore été ajouté. Pour ajouter un nouveau segment, allez dans Menu du produit > Personnes > Segments.
 no-users-have-been-assigned-to-this-segment=Aucun utilisateur n'a été affecté à ce segment.
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Ne contient pas
 not-equals=Différent de
 preview-members=Aperçu des membres
@@ -93,6 +97,7 @@ segments=Segments
 segments-asah-connector-configuration-name=Cloud des analyses de segments
 segments-service-configuration-name=Service des segments
 select-experience=Sélectionnez l'expérience (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Cloud analytique
 source.dxp=DXP
 test-name=Nom du test (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Le segment est introuvable.
 there-are-no-segments=Il n'y a pas de segment.
 untitled-segment=Segment sans intitulé
 user-segment=Segment d'utilisateur
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} membre
 x-members={0} membres
 x-properties={0} propriétés
