--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_hu.properties
@@ -12,9 +12,12 @@ contributor.context=Munkamenet
 contributor.user=Felhasználó
 contributor.user-organization=Szervezet
 create-new-test=Új teszt létrehozása
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Teszt létrehozása
 create-test-error=Váratlan hiba történt az A/B teszt létrehozásakor. (Automatic Translation)
 create-test-help-message=Az oldal vagy a tapasztalat optimalizálásához hozzon létre egy új A/B tesztet. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Kritériumok
 criteria-cancel-confirmation-message=El nem mentett módosításai vannak. Biztosan kilép?
 criteria-error-message-edit=Törölje ezt a feltételt. Egy már nem létező saját mezőből jött létre.
@@ -82,6 +85,7 @@ new-x-segment=Új {0} szegmens
 no-active-tests-were-found-for-the-selected-experience=A kiválasztott élményhez nem található aktív teszt.
 no-segments-have-been-added-yet=Még nincsenek hozzáadva szegmensek. Új szegmens hozzáadásához válassza a Termék menü > Emberek > Szegmensek elemét.
 no-users-have-been-assigned-to-this-segment=Nincs felhasználó hozzárendelve ehhez a szegmenshez.
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Nem tartalmaz
 not-equals=Nem egyenlő
 preview-members=Tagok előnézete
@@ -93,6 +97,7 @@ segments=Szegmensek
 segments-asah-connector-configuration-name=Szegmensek elemzési felhője
 segments-service-configuration-name=Szegmens szolgáltatás
 select-experience=Élmény kiválasztása
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics felhő
 source.dxp=DXP
 test-name=Teszt neve
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=A szegmens nem található.
 there-are-no-segments=Nincsenek szegmensek.
 untitled-segment=Felirat nélküli szegmens
 user-segment=Felhasználói szegmens
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} tag
 x-members={0} tag
 x-properties={0} tulajdonság
