--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_it.properties
@@ -12,9 +12,12 @@ contributor.context=Sessione (Automatic Translation)
 contributor.user=Utente (Automatic Translation)
 contributor.user-organization=Organizzazione (Automatic Translation)
 create-new-test=Crea nuovo test (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Crea test (Automatic Translation)
 create-test-error=Si è verificato un errore imprevisto durante la creazione del test A/B. (Automatic Translation)
 create-test-help-message=Crea un nuovo test A/B per ottimizzare la tua pagina o la tua esperienza. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Criteri (Automatic Translation)
 criteria-cancel-confirmation-message=Sono presenti modifiche non salvate. Sei sicuro di voler uscire? (Automatic Translation)
 criteria-error-message-edit=Eliminare questa condizione. È stato creato da un campo personalizzato che non esiste più. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Non sono stati trovati test attivi per l'esperienza selezionata. (Automatic Translation)
 no-segments-have-been-added-yet=Non sono stati ancora aggiunti segmenti. Per aggiungere un nuovo segmento vai a Menu Prodotto > Persone > Segmenti. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Gli utenti non sono stati assegnati a questo segmento. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Non contiene (Automatic Translation)
 not-equals=Non è uguale a (Automatic Translation)
 preview-members=Membri di anteprima (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Segmenti (Automatic Translation)
 segments-asah-connector-configuration-name=Segmenti di analisi cloud (Automatic Translation)
 segments-service-configuration-name=Servizio di segmenti (Automatic Translation)
 select-experience=Seleziona esperienza (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analitica Cloud (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Nome test (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Il segmento non è stato trovato. (Automatic Tran
 there-are-no-segments=Non vi sono segmenti. (Automatic Translation)
 untitled-segment=Segmento senza titolo (Automatic Translation)
 user-segment=Segmento utente (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
