--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_nl.properties
@@ -12,9 +12,12 @@ contributor.context=Sessie
 contributor.user=Gebruiker
 contributor.user-organization=Organisatie
 create-new-test=Nieuwe test maken
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Test maken
 create-test-error=An unexpected error occurred while creating the A/B test. (Automatic Copy)
 create-test-help-message=Create a new A/B test to optimize your page or experience. (Automatic Copy)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Criteria
 criteria-cancel-confirmation-message=Er zijn niet-opgeslagen wijzigingen. Weet u zeker dat u wilt afsluiten?
 criteria-error-message-edit=Verwijder deze voorwaarde. Ze werd gemaakt voor een aangepast veld dat niet meer bestaat.
@@ -82,6 +85,7 @@ new-x-segment=Nieuw {0} segment
 no-active-tests-were-found-for-the-selected-experience=Geen actieve tests gevonden voor de geselecteerde ervaring.
 no-segments-have-been-added-yet=Er werden nog geen segmenten toegevoegd. Ga naar het Productmenu > Personen > Segmenten om een nieuw segment toe te voegen.
 no-users-have-been-assigned-to-this-segment=Er werden geen gebruikers toegewezen aan dit segment.
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Bevat niet
 not-equals=Is niet gelijk aan
 preview-members=Voorbeeldweeergave leden bekijken
@@ -93,6 +97,7 @@ segments=Segmenten
 segments-asah-connector-configuration-name=Segmentanalysecloud
 segments-service-configuration-name=Segmentenservice
 select-experience=Ervaring selecteren
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analysecloud
 source.dxp=DXP
 test-name=Testnaam
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Het segment werd niet gevonden.
 there-are-no-segments=Er zijn geen segmenten.
 untitled-segment=Segment zonder titel
 user-segment=Gebruikerssegment
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} lid
 x-members={0} leden
 x-properties={0} eigenschappen
