--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pt_BR.properties
@@ -12,9 +12,12 @@ contributor.context=Sessão
 contributor.user=Usuário
 contributor.user-organization=Organização
 create-new-test=Criar Novo Teste
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Criar Teste
 create-test-error=Ocorreu um erro inesperado ao criar o teste a/B. (Automatic Translation)
 create-test-help-message=Crie um novo teste a/B para otimizar sua página ou experiência. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Critérios
 criteria-cancel-confirmation-message=Existem alterações que não foram salvas. Tem certeza que deseja sair?
 criteria-error-message-edit=Excluir esta condição. Ela foi criada de um campo personalizado que não existe mais.
@@ -82,6 +85,7 @@ new-x-segment=Novo {0} segmento
 no-active-tests-were-found-for-the-selected-experience=Nenhum teste ativo foi encontrado para a experiência selecionada.
 no-segments-have-been-added-yet=Nenhum segmento foi adicionado até o momento. Para adicionar um novo segmento acesse Menu do produto > Pessoas > Segmentos.
 no-users-have-been-assigned-to-this-segment=Nenhum usuário foi designado para este segmento.
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Não contém
 not-equals=Diferentes
 preview-members=Visualizar membros
@@ -93,6 +97,7 @@ segments=Segmentos
 segments-asah-connector-configuration-name=Nuvem de análise dos segmentos
 segments-service-configuration-name=Serviço de segmentos
 select-experience=Selecionar experiência
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Nuvem de análises
 source.dxp=DXP
 test-name=Nome do Teste
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=O segmento não pode ser encontrado.
 there-are-no-segments=Não há nenhum segmento.
 untitled-segment=Segmento sem título
 user-segment=Segmento do usuário
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Membro
 x-members={0} Membros
 x-properties={0} Propriedades
