--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ro.properties
@@ -12,9 +12,12 @@ contributor.context=Sesiune (Automatic Translation)
 contributor.user=Utilizator (Automatic Translation)
 contributor.user-organization=Organizarea (Automatic Translation)
 create-new-test=Creare test nou (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Creare test (Automatic Translation)
 create-test-error=S-a produs o eroare neașteptată la crearea testului A/B. (Automatic Translation)
 create-test-help-message=Creați un nou test a/B pentru a vă optimiza pagina sau experiența. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Criteriile (Automatic Translation)
 criteria-cancel-confirmation-message=Există modificări nesalvate. Ești sigur că vrei să ieși? (Automatic Translation)
 criteria-error-message-edit=Ștergeți această condiție. Acesta a fost creat dintr-un câmp particularizat care nu mai există. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Nu s-au găsit teste active pentru experiența selectată. (Automatic Translation)
 no-segments-have-been-added-yet=Nu s-au adăugat segmente încă. Pentru a adăuga un segment nou Du-te la meniul de produse > People > segmente. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Utilizatorii nu au fost atribuite acestui segment. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Nu conţine (Automatic Translation)
 not-equals=Nu este egal cu (Automatic Translation)
 preview-members=Previzualizare membri (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Segmente (Automatic Translation)
 segments-asah-connector-configuration-name=Segmente de analiză Cloud (Automatic Translation)
 segments-service-configuration-name=Serviciu de segmente (Automatic Translation)
 select-experience=Selectați experiență (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analiză Cloud (Automatic Translation)
 source.dxp=DELUXE (Automatic Translation)
 test-name=Nume test (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Imposibil de găsit segmentul. (Automatic Transla
 there-are-no-segments=Nu există nici o segmente. (Automatic Translation)
 untitled-segment=Segment fără titlu (Automatic Translation)
 user-segment=Utilizator Segment (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
