--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sv.properties
@@ -12,9 +12,12 @@ contributor.context=Session
 contributor.user=Användare
 contributor.user-organization=Organisation
 create-new-test=Skapa nytt test
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Skapa test
 create-test-error=An unexpected error occurred while creating the A/B test. (Automatic Copy)
 create-test-help-message=Create a new A/B test to optimize your page or experience. (Automatic Copy)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Kriterier
 criteria-cancel-confirmation-message=Det finns osparade ändringar. Vill du verkligen avsluta?
 criteria-error-message-edit=Ta bort det här villkoret. Det skapades från ett anpassat fält som inte finns längre.
@@ -82,6 +85,7 @@ new-x-segment=Nytt {0} segment
 no-active-tests-were-found-for-the-selected-experience=Inga aktiva tester hittades för den valda upplevelsen.
 no-segments-have-been-added-yet=Inga segment har lagts till än. För att lägga till ett nytt segment går du till Produktmeny > Personer > Segment.
 no-users-have-been-assigned-to-this-segment=Inga användare har tilldelats till det här segmentet.
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Innehåller inte
 not-equals=Inte lika med
 preview-members=Förhandsvisa medlemmar
@@ -93,6 +97,7 @@ segments=Segment
 segments-asah-connector-configuration-name=Moln för segmentanalys
 segments-service-configuration-name=Segmenttjänst
 select-experience=Välj upplevelse
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analysmoln
 source.dxp=DXP
 test-name=Testets namn
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Segmentet hittades inte.
 there-are-no-segments=Det finns inga segment.
 untitled-segment=Namnlöst segment
 user-segment=Användarsegment
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} medlem
 x-members={0} medlemmar
 x-properties={0} egenskaper
