--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_CN.properties
@@ -12,9 +12,12 @@ contributor.context=会话
 contributor.user=用户
 contributor.user-organization=组织
 create-new-test=创建新测试
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=创建测试
 create-test-error=创建 A/B 测试时发生意外错误。 (Automatic Translation)
 create-test-help-message=创建新的 A/B 测试以优化页面或体验。 (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=条件
 criteria-cancel-confirmation-message=存在未保存的更改。确定要退出吗？
 criteria-error-message-edit=删除此条件。它是使用已不再存在的自定义字段创建的。
@@ -82,6 +85,7 @@ new-x-segment=新的 {0} 细分
 no-active-tests-were-found-for-the-selected-experience=没有为选定体验找到有效的测试。
 no-segments-have-been-added-yet=尚未添加任何细分。要添加新细分，请转到"产品菜单 > 人员 > 细分"。
 no-users-have-been-assigned-to-this-segment=尚没有用户分配到此细分。
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=不包含
 not-equals=不等于
 preview-members=预览成员
@@ -93,6 +97,7 @@ segments=细分
 segments-asah-connector-configuration-name=细分分析云
 segments-service-configuration-name=细分服务
 select-experience=选择体验
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud
 source.dxp=DXP
 test-name=测试名称
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=无法找到此细分。
 there-are-no-segments=没有细分。
 untitled-segment=未命名的细分
 user-segment=用户细分
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} 个成员
 x-members={0} 个成员
 x-properties={0} 个属性
