--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_zh_TW.properties
@@ -12,9 +12,12 @@ contributor.context=會話 (Automatic Translation)
 contributor.user=使用者 (Automatic Translation)
 contributor.user-organization=組織 (Automatic Translation)
 create-new-test=創建新測試 (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=創建測試 (Automatic Translation)
 create-test-error=創建 A/B 測試時發生意外錯誤。 (Automatic Translation)
 create-test-help-message=創建新的 A/B 測試以優化頁面或體驗。 (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=標準 (Automatic Translation)
 criteria-cancel-confirmation-message=存在未保存的更改。是否確實要退出？ (Automatic Translation)
 criteria-error-message-edit=刪除此條件。它是從不再存在的自訂欄位創建的。 (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=未找到所選體驗的活動測試。 (Automatic Translation)
 no-segments-have-been-added-yet=尚未添加任何段。要添加新細分,請訪問"產品功能表">"人員">"細分"。 (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=尚未將使用者分配給此段。 (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=不包含 (Automatic Translation)
 not-equals=不等於 (Automatic Translation)
 preview-members=預覽會員 (Automatic Translation)
@@ -93,6 +97,7 @@ segments=段 (Automatic Translation)
 segments-asah-connector-configuration-name=細分分析雲 (Automatic Translation)
 segments-service-configuration-name=分段服務 (Automatic Translation)
 select-experience=選擇體驗 (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=分析雲 (Automatic Translation)
 source.dxp=dxp (Automatic Translation)
 test-name=測試名稱 (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=找不到段。 (Automatic Translation)
 there-are-no-segments=沒有段。 (Automatic Translation)
 untitled-segment=無標題段 (Automatic Translation)
 user-segment=使用者市場區隔 (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
