--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_bg.properties
@@ -12,9 +12,12 @@ contributor.context=Сесия (Automatic Translation)
 contributor.user=Потребител (Automatic Translation)
 contributor.user-organization=Организация (Automatic Translation)
 create-new-test=Създай нов тест (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Създаване на тест (Automatic Translation)
 create-test-error=Възникна неочаквана грешка при създаване на тест A/B. (Automatic Translation)
 create-test-help-message=Създаване на нов тест A/B за оптимизиране на вашата страница или опит. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Критерии (Automatic Translation)
 criteria-cancel-confirmation-message=Има незапазени промени. Наистина ли искате да излезете? (Automatic Translation)
 criteria-error-message-edit=Изтрийте това условие. Тя е създадена от персонализирано поле, което вече не съществува. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Не са открити активни тестове за избраното преживяване. (Automatic Translation)
 no-segments-have-been-added-yet=Все още няма добавени сегменти. За да добавите нов сегмент, отидете на меню за продукти > хора > сегменти. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Няма потребители са присвоени на този сегмент. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Не съдържа (Automatic Translation)
 not-equals=Не е равно на (Automatic Translation)
 preview-members=Преглед членове (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Сегменти (Automatic Translation)
 segments-asah-connector-configuration-name=Облак за анализ на сегменти (Automatic Translation)
 segments-service-configuration-name=Сегменти услуга (Automatic Translation)
 select-experience=Изберете опит (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Анализ облак (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Име на теста (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Сегмент не можа да бъде нам
 there-are-no-segments=Има няма сегменти. (Automatic Translation)
 untitled-segment=Сегмент без заглавие (Automatic Translation)
 user-segment=Потребителски сегмент (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
