--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_de.properties
@@ -12,9 +12,12 @@ contributor.context=Sitzung
 contributor.user=Benutzer
 contributor.user-organization=Organisation
 create-new-test=Neuen Test erstellen
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Test erstellen
 create-test-error=An unexpected error occurred while creating the A/B test. (Automatic Copy)
 create-test-help-message=Create a new A/B test to optimize your page or experience. (Automatic Copy)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Kriterien
 criteria-cancel-confirmation-message=Es gibt ungespeicherte Änderungen. Sind Sie sicher, dass Sie es beenden möchten?
 criteria-error-message-edit=Diese Bedingung löschen. Sie wurde aus einem benutzerdefinierten Feld erstellt, das nicht mehr existiert.
@@ -82,6 +85,7 @@ new-x-segment=Neue Segmente: {0}
 no-active-tests-were-found-for-the-selected-experience=Es wurden keine aktiven Tests für das ausgewählte Erlebnis gefunden.
 no-segments-have-been-added-yet=Es wurden noch keine Segmente hinzugefügt. Um ein neues Segment hinzuzufügen, gehen Sie zu Produktmenü > Personen > Segmente.
 no-users-have-been-assigned-to-this-segment=Diesem Segment wurden keine Benutzer zugewiesen.
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Enthält nicht
 not-equals=Nicht gleich
 preview-members=Mitglieder-Vorschau
@@ -93,6 +97,7 @@ segments=Segmente
 segments-asah-connector-configuration-name=Analytics-Cloud für Segmente
 segments-service-configuration-name=Segmente-Service
 select-experience=Erlebnis wählen
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics-Cloud
 source.dxp=DXP
 test-name=Test-Name
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Das Segment konnte nicht gefunden werden.
 there-are-no-segments=Es gibt keine Segmente.
 untitled-segment=Unbenanntes Segment
 user-segment=Benutzer-Segment
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Mitglied(er)
 x-members={0} Mitglied(er)
 x-properties={0} Eigenschaften
