--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_el.properties
@@ -12,9 +12,12 @@ contributor.context=Περίοδος λειτουργίας (Automatic Translati
 contributor.user=Χρήστης (Automatic Translation)
 contributor.user-organization=Οργάνωση (Automatic Translation)
 create-new-test=Δημιουργία νέας δοκιμής (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Δημιουργία δοκιμής (Automatic Translation)
 create-test-error=Παρουσιάστηκε μη αναμενόμενο σφάλμα κατά τη δημιουργία της δοκιμής A/B. (Automatic Translation)
 create-test-help-message=Δημιουργήστε μια νέα δοκιμή A/B για να βελτιστοποιήσετε τη σελίδα ή την εμπειρία σας. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Κριτήρια (Automatic Translation)
 criteria-cancel-confirmation-message=Υπάρχουν μη αποθηκευμένες αλλαγές. Είστε βέβαιοι ότι θέλετε να τερματίσετε την έξοδο; (Automatic Translation)
 criteria-error-message-edit=Διαγράψτε αυτήν τη Συνθήκη. Δημιουργήθηκε από ένα προσαρμοσμένο πεδίο που δεν υπάρχει πλέον. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Δεν εντοπίστηκαν ενεργές δοκιμές για την επιλεγμένη εμπειρία. (Automatic Translation)
 no-segments-have-been-added-yet=Δεν έχουν προστεθεί ακόμη τμήματα. Για να προσθέσετε ένα νέο τμήμα, μεταβείτε στο μενού προϊόντων. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Οι χρήστες δεν έχουν εκχωρηθεί σε αυτό το τμήμα. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Δεν περιέχει (Automatic Translation)
 not-equals=Δεν ισούται με (Automatic Translation)
 preview-members=Μέλη του προγράμματος προεπισκόπηση (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Τμήματα (Automatic Translation)
 segments-asah-connector-configuration-name=Τμήματα ανάλυσης υπολογιστικού νέφους (Automatic Translation)
 segments-service-configuration-name=Τμήματα εξυπηρέτησης (Automatic Translation)
 select-experience=Επιλέξτε εμπειρία (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics σύννεφο (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Όνομα δοκιμής (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Το τμήμα δεν θα μπορούσε να
 there-are-no-segments=Υπάρχουν καμία τμήματα. (Automatic Translation)
 untitled-segment=Τμήμα χωρίς τίτλο (Automatic Translation)
 user-segment=Τμήμα χρηστών (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
