--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_et.properties
@@ -12,9 +12,12 @@ contributor.context=Seansi (Automatic Translation)
 contributor.user=Kasutaja (Automatic Translation)
 contributor.user-organization=Organisatsiooni (Automatic Translation)
 create-new-test=Loo uus test (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Testi loomine (Automatic Translation)
 create-test-error=A/B-testi loomisel ilmnes ootamatu tõrge. (Automatic Translation)
 create-test-help-message=Saate oma lehe või kogemuse optimeerimiseks luua uue A/B-testi. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Kriteeriumid (Automatic Translation)
 criteria-cancel-confirmation-message=On salvestamata muudatusi. Kas soovite kindlasti väljuda? (Automatic Translation)
 criteria-error-message-edit=Kustutage see tingimus. See loodi kohandatud välja, mida pole enam olemas. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Valitud kogemuse kohta aktiivseid katseid ei leitud. (Automatic Translation)
 no-segments-have-been-added-yet=Ühtegi segmenti pole veel lisatud. Uue segmendi lisamiseks minge jaotisse Tootemenüü > inimesed > segmendid. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Ükski kasutaja määratud selles segmendis. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Ole sisaldab (Automatic Translation)
 not-equals=Ei võrdu (Automatic Translation)
 preview-members=Eelvaade liikmed (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Segmentide (Automatic Translation)
 segments-asah-connector-configuration-name=Segmentide analüüsi pilv (Automatic Translation)
 segments-service-configuration-name=Segmentide teenus (Automatic Translation)
 select-experience=Vali kogemus (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics pilve (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Testi nimi (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Segmendi ei leitud. (Automatic Translation)
 there-are-no-segments=Seal on pole segmente. (Automatic Translation)
 untitled-segment=Tiitlita segment (Automatic Translation)
 user-segment=Kasutaja segmendi (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
