--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_gl.properties
@@ -12,9 +12,12 @@ contributor.context=Session (Automatic Copy)
 contributor.user=User (Automatic Copy)
 contributor.user-organization=Organization (Automatic Copy)
 create-new-test=Create New Test (Automatic Copy)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Create Test (Automatic Copy)
 create-test-error=An unexpected error occurred while creating the A/B test. (Automatic Copy)
 create-test-help-message=Create a new A/B test to optimize your page or experience. (Automatic Copy)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Criteria (Automatic Copy)
 criteria-cancel-confirmation-message=There are unsaved changes. Are you sure you want to exit? (Automatic Copy)
 criteria-error-message-edit=Delete this condition. It was created from a custom field that no longer exists. (Automatic Copy)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=No active tests were found for the selected experience. (Automatic Copy)
 no-segments-have-been-added-yet=No segments have been added yet. To add a new segment go to Product Menu > People > Segments. (Automatic Copy)
 no-users-have-been-assigned-to-this-segment=No users have been assigned to this segment. (Automatic Copy)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Not Contains (Automatic Copy)
 not-equals=Not Equals (Automatic Copy)
 preview-members=Preview Members (Automatic Copy)
@@ -93,6 +97,7 @@ segments=Segments (Automatic Copy)
 segments-asah-connector-configuration-name=Segments Analytics Cloud (Automatic Copy)
 segments-service-configuration-name=Segments Service (Automatic Copy)
 select-experience=Select Experience (Automatic Copy)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud (Automatic Copy)
 source.dxp=DXP (Automatic Copy)
 test-name=Test Name (Automatic Copy)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=The segment could not be found. (Automatic Copy)
 there-are-no-segments=There are no segments. (Automatic Copy)
 untitled-segment=Untitled Segment (Automatic Copy)
 user-segment=User Segment (Automatic Copy)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
