--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_hi_IN.properties
@@ -12,9 +12,12 @@ contributor.context=सत्र (Automatic Translation)
 contributor.user=उपयोगकर्ता (Automatic Translation)
 contributor.user-organization=संगठन (Automatic Translation)
 create-new-test=नया परीक्षण बनाएँ (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=टेस्ट बनाएँ (Automatic Translation)
 create-test-error=A/B परीक्षण बनाते समय कोई अनपेक्षित त्रुटि उत्पन्न हुई। (Automatic Translation)
 create-test-help-message=अपने पृष्ठ या अनुभव को ऑप्टिमाइज़ करने के लिए कोई नया A/B परीक्षण बनाएँ. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=मापदंड (Automatic Translation)
 criteria-cancel-confirmation-message=न सहेजे गए परिवर्तन हैं. क्या आप वाकई बाहर निकलना चाहते हैं? (Automatic Translation)
 criteria-error-message-edit=इस शर्त को हटाएं । यह अब मौजूद नहीं है जो किसी कस्टम फ़ील्ड से बनाया गया था । (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=चयनित अनुभव के लिए कोई सक्रिय परीक्षण नहीं मिले. (Automatic Translation)
 no-segments-have-been-added-yet=अभी तक कोई सेगमेंट नहीं जोड़ा गया है. एक नया खंड जोड़ने के लिए उत्पाद मेनू में जाना [ लोग ] खंड. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=इस सेगमेंट को कोई भी उपयोगकर्ता असाइन नहीं किया गया है. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=शामिल नहीं (Automatic Translation)
 not-equals=बराबर नहीं (Automatic Translation)
 preview-members=पूर्वावलोकन सदस्य (Automatic Translation)
@@ -93,6 +97,7 @@ segments=क्षेत्रों (Automatic Translation)
 segments-asah-connector-configuration-name=सेगमेंट Analytics क्लाउड (Automatic Translation)
 segments-service-configuration-name=सेगमेंट सेवा (Automatic Translation)
 select-experience=अनुभव का चयन करें (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics क्लाउड (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=परीक्षण का नाम (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=खंड नहीं मिल सका । (A
 there-are-no-segments=कोई सेगमेंट नहीं हैं । (Automatic Translation)
 untitled-segment=अनाम सेगमेंट (Automatic Translation)
 user-segment=उपयोगकर्ता खंड (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
