--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_in.properties
@@ -12,9 +12,12 @@ contributor.context=Sesi (Automatic Translation)
 contributor.user=Pengguna (Automatic Translation)
 contributor.user-organization=Organisasi (Automatic Translation)
 create-new-test=Buat tes baru (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Buat tes (Automatic Translation)
 create-test-error=Galat tak terduga terjadi saat membuat uji A/B. (Automatic Translation)
 create-test-help-message=Buat pengujian A/B baru untuk mengoptimalkan halaman atau pengalaman Anda. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Kriteria (Automatic Translation)
 criteria-cancel-confirmation-message=Ada perubahan yang belum disimpan. Apakah Anda yakin ingin keluar? (Automatic Translation)
 criteria-error-message-edit=Hapus kondisi ini. Ini dibuat dari bidang kustom yang tidak ada lagi. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Tidak ada tes aktif yang ditemukan untuk pengalaman yang dipilih. (Automatic Translation)
 no-segments-have-been-added-yet=Tidak ada segmen telah ditambahkan belum. Untuk menambahkan segmen baru, buka menu produk > orang > segmen. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Tidak ada pengguna yang telah ditetapkan untuk segmen ini. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Tidak berisi (Automatic Translation)
 not-equals=Tidak sama (Automatic Translation)
 preview-members=Anggota Tinjauan (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Segmen (Automatic Translation)
 segments-asah-connector-configuration-name=Segmen Cloud Analytics (Automatic Translation)
 segments-service-configuration-name=Segmen Layanan (Automatic Translation)
 select-experience=Pilih pengalaman (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics awan (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Nama uji (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Segmen tidak dapat ditemukan. (Automatic Translat
 there-are-no-segments=Ada tidak ada segmen. (Automatic Translation)
 untitled-segment=Untitled segmen (Automatic Translation)
 user-segment=Segmen pengguna (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
