--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_iw.properties
@@ -12,9 +12,12 @@ contributor.context=הפעלה (Automatic Translation)
 contributor.user=המשתמש (Automatic Translation)
 contributor.user-organization=הארגון (Automatic Translation)
 create-new-test=צור בדיקה חדשה (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=צור בדיקה (Automatic Translation)
 create-test-error=אירעה שגיאה בלתי צפויה בעת יצירת הבדיקה A/B. (Automatic Translation)
 create-test-help-message=צור בדיקת A/B חדשה כדי למטב את העמוד או הניסיון שלך. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=קריטריונים (Automatic Translation)
 criteria-cancel-confirmation-message=. יש שינויים שלא נשמרו האם אתה בטוח שברצונך לצאת? (Automatic Translation)
 criteria-error-message-edit=מחק תנאי זה. הוא נוצר משדה מותאם אישית שאינו קיים עוד. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=לא נמצאו בדיקות פעילות עבור החוויה שנבחרה. (Automatic Translation)
 no-segments-have-been-added-yet=לא נוספו עדיין מקטעים. כדי להוסיף מקטע חדש עבור לתפריט מוצר > אנשים > מקטעים. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=אין משתמשים שהוקצו קטע זה. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=לא מכיל (Automatic Translation)
 not-equals=לא שווה (Automatic Translation)
 preview-members=תצוגה מקדימה של חברים (Automatic Translation)
@@ -93,6 +97,7 @@ segments=מקטעים (Automatic Translation)
 segments-asah-connector-configuration-name=מגזרים ניתוח ענן (Automatic Translation)
 segments-service-configuration-name=שירות מקטעים (Automatic Translation)
 select-experience=בחר ניסיון (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=ניתוח ענן (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=שם בדיקה (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=לא היתה אפשרות למצוא את המק
 there-are-no-segments=ישנם קטעים אין. (Automatic Translation)
 untitled-segment=פלח ללא שם (Automatic Translation)
 user-segment=המשתמש פלח (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
