--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ko.properties
@@ -12,9 +12,12 @@ contributor.context=세션 (Automatic Translation)
 contributor.user=사용자 (Automatic Translation)
 contributor.user-organization=조직 (Automatic Translation)
 create-new-test=새 테스트 만들기 (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=테스트 만들기 (Automatic Translation)
 create-test-error=A/B 테스트를 만드는 동안 예기치 않은 오류가 발생했습니다. (Automatic Translation)
 create-test-help-message=새 A/B 테스트를 만들어 페이지 또는 환경을 최적화합니다. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=기준 (Automatic Translation)
 criteria-cancel-confirmation-message=저장되지 않은 변경 내용이 있습니다. 종료하시겠습니까? (Automatic Translation)
 criteria-error-message-edit=이 조건을 삭제 합니다. 더 이상 존재 하지 않는 사용자 정의 필드에서 작성 되었습니다. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=선택한 경험에 대한 활성 테스트를 찾을 수 없습니다. (Automatic Translation)
 no-segments-have-been-added-yet=세그먼트가 아직 추가되지 않았습니다. 새 세그먼트를 추가하려면 제품 메뉴로 이동합니다 . (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=사용자가이 세그먼트에 할당 되었습니다. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=아닙니다 포함 (Automatic Translation)
 not-equals=같지 (Automatic Translation)
 preview-members=미리 보기 회원 (Automatic Translation)
@@ -93,6 +97,7 @@ segments=세그먼트 (Automatic Translation)
 segments-asah-connector-configuration-name=세그먼트 분석 클라우드 (Automatic Translation)
 segments-service-configuration-name=세그먼트 서비스 (Automatic Translation)
 select-experience=경험 선택 (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=분석 클라우드 (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=테스트 이름 (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=세그먼트를 찾을 수 없습니다. (Automat
 there-are-no-segments=세그먼트가 있다. (Automatic Translation)
 untitled-segment=제목 없는 세그먼트 (Automatic Translation)
 user-segment=사용자 세그먼트 (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
