--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_lt.properties
@@ -12,9 +12,12 @@ contributor.context=Sesija (Automatic Translation)
 contributor.user=Vartotojo (Automatic Translation)
 contributor.user-organization=Organizacijos (Automatic Translation)
 create-new-test=Sukurti naują testą (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Sukurti testą (Automatic Translation)
 create-test-error=Kuriant A/B testą įvyko netikėta klaida. (Automatic Translation)
 create-test-help-message=Sukurkite naują A/B testą, kad optimizuotumėte savo puslapį ar patirtį. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Kriterijus (Automatic Translation)
 criteria-cancel-confirmation-message=Yra neįrašytų keitimų. Ar tikrai norite išeiti? (Automatic Translation)
 criteria-error-message-edit=Panaikinkite šią sąlygą. Jis buvo sukurtas iš pasirinktinio lauko, kurio nebėra. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Nėra aktyvių testai pasirinktos patirties. (Automatic Translation)
 no-segments-have-been-added-yet=Dar nepridėta jokių segmentų. Norėdami įtraukti naują segmentą, eikite į produkto meniu > žmonės > segmentai. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Vartotojų nėra priskirtų šiame segmente. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Ne yra (Automatic Translation)
 not-equals=Ne lygus (Automatic Translation)
 preview-members=Peržiūrėti narių (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Segmentai (Automatic Translation)
 segments-asah-connector-configuration-name=Segmentai Analytics Cloud (Automatic Translation)
 segments-service-configuration-name=Segmentų paslaugos (Automatic Translation)
 select-experience=Pasirinkite "patirtis" (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud="Analytics" Cloud (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Bandymo pavadinimas (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Segmento nerasta. (Automatic Translation)
 there-are-no-segments=Šiuo metu nėra segmentus. (Automatic Translation)
 untitled-segment=Be pavadinimo segmentas (Automatic Translation)
 user-segment=Vartotojų segmente (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
