--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_nb.properties
@@ -12,9 +12,12 @@ contributor.context=Økt (Automatic Translation)
 contributor.user=Bruker (Automatic Translation)
 contributor.user-organization=Organisasjon (Automatic Translation)
 create-new-test=Opprett ny test (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Opprett test (Automatic Translation)
 create-test-error=Det oppstod en uventet feil under oppretting av A/B-testen. (Automatic Translation)
 create-test-help-message=Opprett en ny A/B-test for å optimalisere siden eller opplevelsen. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Vilkår (Automatic Translation)
 criteria-cancel-confirmation-message=Det er ulagrede endringer. Er du sikker på at du vil avslutte? (Automatic Translation)
 criteria-error-message-edit=Slett denne betingelsen. Den ble opprettet fra et egendefinert felt som ikke lenger finnes. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Ingen aktive tester ble funnet for den valgte opplevelsen. (Automatic Translation)
 no-segments-have-been-added-yet=Ingen segmenter er lagt til ennå. For å legge til et nytt segment gå til produkt meny > People > segmenter. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Ingen brukere er tilordnet dette segmentet. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Ikke inneholder (Automatic Translation)
 not-equals=Ikke lik (Automatic Translation)
 preview-members=Forhåndsvisning medlemmer (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Segmenter (Automatic Translation)
 segments-asah-connector-configuration-name=Segmenter Analytics Cloud (Automatic Translation)
 segments-service-configuration-name=Segmenter Service (Automatic Translation)
 select-experience=Velg opplevelse (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Test navn (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Finner ikke segmentet. (Automatic Translation)
 there-are-no-segments=Det finnes ingen segmenter. (Automatic Translation)
 untitled-segment=Segment uten navn (Automatic Translation)
 user-segment=Brukeren Segment (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
