--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_pl.properties
@@ -12,9 +12,12 @@ contributor.context=Sesja (Automatic Translation)
 contributor.user=Użytkownika (Automatic Translation)
 contributor.user-organization=Organizacja (Automatic Translation)
 create-new-test=Utwórz nowy test (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Utwórz test (Automatic Translation)
 create-test-error=Wystąpił nieoczekiwany błąd podczas tworzenia testu A/B. (Automatic Translation)
 create-test-help-message=Utwórz nowy test A/B, aby zoptymalizować stronę lub doświadczenie. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Kryteria (Automatic Translation)
 criteria-cancel-confirmation-message=Istnieją niezapisane zmiany. Czy na pewno chcesz wyjść? (Automatic Translation)
 criteria-error-message-edit=Usuń ten warunek. Został on utworzony na podstawie niestandardowego pola, które już nie istnieje. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Nie znaleziono aktywnych testów dla wybranego doświadczenia. (Automatic Translation)
 no-segments-have-been-added-yet=Nie dodano jeszcze żadnych segmentów. Aby dodać nowy segment, przejdź do menu produktu > osoby > segmenty. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Użytkownicy nie zostały przypisane do tego segmentu. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Nie zawiera (Automatic Translation)
 not-equals=Nie jest równe (Automatic Translation)
 preview-members=Członkowie podglądu (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Segmenty (Automatic Translation)
 segments-asah-connector-configuration-name=Segmenty Analytics Cloud (Automatic Translation)
 segments-service-configuration-name=Służby segmentami (Automatic Translation)
 select-experience=Wybierz doświadczenie (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Nazwa testu (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Nie można odnaleźć segmentu. (Automatic Transl
 there-are-no-segments=Istnieją żadne segmenty. (Automatic Translation)
 untitled-segment=Segment bez tytułu (Automatic Translation)
 user-segment=Segmentu użytkownika (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
