--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ru.properties
@@ -12,9 +12,12 @@ contributor.context=Сессия (Automatic Translation)
 contributor.user=Пользователь (Automatic Translation)
 contributor.user-organization=Организации (Automatic Translation)
 create-new-test=Создание нового теста (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Создание теста (Automatic Translation)
 create-test-error=При создании теста A/B произошла неожиданная ошибка. (Automatic Translation)
 create-test-help-message=Создайте новый тест A/B для оптимизации страницы или опыта. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Критерии (Automatic Translation)
 criteria-cancel-confirmation-message=Есть не сохраненные изменения. Ты уверен, что хочешь выйти? (Automatic Translation)
 criteria-error-message-edit=Удалите это условие. Он был создан из пользовательского поля, которое больше не существует. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Активных тестов для выбранного опыта не найдено. (Automatic Translation)
 no-segments-have-been-added-yet=Сегменты еще не добавлены. Чтобы добавить новый сегмент перейдите в меню продукта и люди и сегменты. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Пользователи не были назначены для этого сегмента. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Не содержит (Automatic Translation)
 not-equals=Не равно (Automatic Translation)
 preview-members=Просмотр членов (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Сегменты (Automatic Translation)
 segments-asah-connector-configuration-name=Сегменты аналитика облако (Automatic Translation)
 segments-service-configuration-name=Сегменты службы (Automatic Translation)
 select-experience=Выберите опыт (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Аналитики облако (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Имя теста (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Не удалось найти сегмент. (A
 there-are-no-segments=Существует без сегментов. (Automatic Translation)
 untitled-segment=Сегмент без названия (Automatic Translation)
 user-segment=Сегмент пользователей (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
