--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sk.properties
@@ -12,9 +12,12 @@ contributor.context=Relácia (Automatic Translation)
 contributor.user=Používateľ (Automatic Translation)
 contributor.user-organization=Organizácia (Automatic Translation)
 create-new-test=Vytvoriť nový test (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Vytvoriť test (Automatic Translation)
 create-test-error=Pri vytváraní testu A/B sa vyskytla neočakávaná chyba. (Automatic Translation)
 create-test-help-message=Vytvorte nový A/B test na optimalizáciu stránky alebo skúsenosti. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Kritériá (Automatic Translation)
 criteria-cancel-confirmation-message=K dispozícii sú neuložené zmeny. Naozaj chcete skončiť? (Automatic Translation)
 criteria-error-message-edit=Odstrániť túto podmienku. Bol vytvorený z vlastného poľa, ktoré už neexistuje. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Pre vybrané skúsenosti sa nenašli žiadne aktívne testy. (Automatic Translation)
 no-segments-have-been-added-yet=Zatiaľ neboli pridané žiadne segmenty. Ak chcete pridať nový segment, prejdite do ponuky produkt > ľudia > segmenty. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Žiadni používatelia boli priradené do tohto segmentu. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Nie obsahuje (Automatic Translation)
 not-equals=Nerovná sa (Automatic Translation)
 preview-members=Náhľad členov (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Segmenty (Automatic Translation)
 segments-asah-connector-configuration-name=Cloud služby Analytics pre segmenty (Automatic Translation)
 segments-service-configuration-name=Segmenty služby (Automatic Translation)
 select-experience=Vyberte možnosť skúsenosti (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics Cloud (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Názov testu (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Segment sa nenašiel. (Automatic Translation)
 there-are-no-segments=Neexistujú žiadne úseky. (Automatic Translation)
 untitled-segment=Segment bez názvu (Automatic Translation)
 user-segment=Segmentu používateľov (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
