--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_sl.properties
@@ -12,9 +12,12 @@ contributor.context=Sejo (Automatic Translation)
 contributor.user=Uporabnik (Automatic Translation)
 contributor.user-organization=Organizacija (Automatic Translation)
 create-new-test=Ustvari nov preskus (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Ustvari test (Automatic Translation)
 create-test-error=Med ustvarjanjem preskusa A/B je prišlo do nepričakovane napake. (Automatic Translation)
 create-test-help-message=Ustvarite nov preskus A/B za optimizacijo vaše strani ali izkušenj. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Merila (Automatic Translation)
 criteria-cancel-confirmation-message=Obstajajo neshranjene spremembe. Ali ste prepričani, da želite zapreti? (Automatic Translation)
 criteria-error-message-edit=Izbrišite ta pogoj. Ustvarjen je bil iz polja po meri, ki ne obstaja več. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Za izbrano izkušnjo niso našli nobenih aktivnih testov. (Automatic Translation)
 no-segments-have-been-added-yet=Še ni bilo dodanih segmentov. Če želite dodati nov segment, pojdite na meni Product > ljudje > segmenti. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Noben uporabnik je bila dodeljena na ta segment. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Ne vsebuje (Automatic Translation)
 not-equals=Ni enako (Automatic Translation)
 preview-members=Predogled članov (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Segmentov (Automatic Translation)
 segments-asah-connector-configuration-name=Google segmenti v oblaku (Automatic Translation)
 segments-service-configuration-name=Segmentih storitev (Automatic Translation)
 select-experience=Izberite izkušnje (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics oblak (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Preizkusno ime (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Segmenta ni mogoče najti. (Automatic Translation
 there-are-no-segments=Obstajajo ne segmente. (Automatic Translation)
 untitled-segment=Neoznačeno segment (Automatic Translation)
 user-segment=Uporabniški Segment (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
