--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_ta_IN.properties
@@ -12,9 +12,12 @@ contributor.context=Session
 contributor.user=பயனர்
 contributor.user-organization=நிறுவனம்
 create-new-test=Create New Test (Automatic Copy)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Create Test (Automatic Copy)
 create-test-error=An unexpected error occurred while creating the A/B test. (Automatic Copy)
 create-test-help-message=Create a new A/B test to optimize your page or experience. (Automatic Copy)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Criteria
 criteria-cancel-confirmation-message=There are unsaved changes. Are you sure you want to exit? (Automatic Copy)
 criteria-error-message-edit=Delete this condition. It was created from a custom field that no longer exists. (Automatic Copy)
@@ -82,6 +85,7 @@ new-x-segment=புதிய {0} செக்மெண்ட்
 no-active-tests-were-found-for-the-selected-experience=No active tests were found for the selected experience. (Automatic Copy)
 no-segments-have-been-added-yet=No segments have been added yet. To add a new segment go to Product Menu > People > Segments. (Automatic Copy)
 no-users-have-been-assigned-to-this-segment=இந்த செக்மெண்டில் எந்த பயனர்களுக்கும் ஒதுக்கப்படவில்லை.
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=இல்லை
 not-equals=சமமாக இல்லை
 preview-members=உறுப்பினர்களை ப்ரிவியூ செய்
@@ -93,6 +97,7 @@ segments=பிரிவுகள்
 segments-asah-connector-configuration-name=Segments Analytics Cloud (Automatic Copy)
 segments-service-configuration-name=செக்மெண்ட்ஸ் சர்வீஸ்
 select-experience=Select Experience (Automatic Copy)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=அனலிட்டிக்ஸ் Cloud
 source.dxp=DXP
 test-name=Test Name (Automatic Copy)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=செக்மெண்டைக் கண்ட
 there-are-no-segments=எந்த செக்மெண்ட்களும் இல்லை.
 untitled-segment=Untitled Segment (Automatic Copy)
 user-segment=பயனர் பிரிவு
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} உறுப்பினர்
 x-members={0} உறுப்பினர்கள்
 x-properties={0} Properties
