--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_th.properties
@@ -12,9 +12,12 @@ contributor.context=เซสชัน (Automatic Translation)
 contributor.user=ผู้ใช้ (Automatic Translation)
 contributor.user-organization=องค์กร (Automatic Translation)
 create-new-test=สร้างการทดสอบใหม่ (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=สร้างการทดสอบ (Automatic Translation)
 create-test-error=มีข้อผิดพลาดที่ไม่คาดคิดเกิดขึ้นขณะสร้างการทดสอบ A/B (Automatic Translation)
 create-test-help-message=สร้างการทดสอบ A/B ใหม่เพื่อเพิ่มประสิทธิภาพหน้าเว็บหรือประสบการณ์ของคุณ (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=เกณฑ์ (Automatic Translation)
 criteria-cancel-confirmation-message=มีการเปลี่ยนแปลงที่ยังไม่ได้บันทึก คุณแน่ใจหรือไม่ว่าคุณต้องการออก (Automatic Translation)
 criteria-error-message-edit=ลบเงื่อนไขนี้ มันถูกสร้างขึ้นจากเขตข้อมูลแบบกำหนดเองที่ไม่มีอยู่อีกต่อไป (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=ไม่พบการทดสอบที่ใช้งานอยู่สำหรับประสบการณ์ที่เลือก (Automatic Translation)
 no-segments-have-been-added-yet=ยังไม่มีการเพิ่มเซ็กเมนต์ หากต้องการเพิ่มเซ็กเมนต์ใหม่ไปที่เมนูผลิตภัณฑ์ > คน > เซ็กเมนต์ (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=ผู้ใช้ไม่ได้ถูกกำหนดให้กับกลุ่มนี้ (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=ไม่ประกอบด้วย (Automatic Translation)
 not-equals=ไม่เท่ากับ (Automatic Translation)
 preview-members=แสดงตัวอย่างสมาชิก (Automatic Translation)
@@ -93,6 +97,7 @@ segments=เซ็กเมนต์ (Automatic Translation)
 segments-asah-connector-configuration-name=Cloud การวิเคราะห์กลุ่ม (Automatic Translation)
 segments-service-configuration-name=ส่วนบริการ (Automatic Translation)
 select-experience=เลือกประสบการณ์ (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=วิเคราะห์ระบบคลาวด์ (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=ชื่อทดสอบ (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=ไม่พบเซ็กเมนต์ (Autom
 there-are-no-segments=มีส่วนไม่ (Automatic Translation)
 untitled-segment=กลุ่มที่ไม่มีชื่อ (Automatic Translation)
 user-segment=ส่วนผู้ใช้ (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
