--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_tr.properties
@@ -12,9 +12,12 @@ contributor.context=Oturum (Automatic Translation)
 contributor.user=Kullanıcı (Automatic Translation)
 contributor.user-organization=Organizasyon (Automatic Translation)
 create-new-test=Yeni test oluştur (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Test oluştur (Automatic Translation)
 create-test-error=A/B testi oluşturulurken beklenmeyen bir hata oluştu. (Automatic Translation)
 create-test-help-message=Sayfanızı veya deneyiminizi optimize etmek için yeni bir A/B testi oluşturun. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Ölçüt (Automatic Translation)
 criteria-cancel-confirmation-message=Kaydedilmemiş değişiklikler vardır. Çıkmak istediğinizden emin misiniz? (Automatic Translation)
 criteria-error-message-edit=Bu koşulu silin. Artık mevcut olmayan bir özel alandan oluşturuldu. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Seçilen deneyim için etkin testler bulunamadı. (Automatic Translation)
 no-segments-have-been-added-yet=Henüz segment eklenmedi. Yeni bir segment eklemek için ürün menüsüne gidin > People > segmentleri. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Hiçbir kullanıcı bu segmente atanmış. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Değil içerir (Automatic Translation)
 not-equals=Eşit değil (Automatic Translation)
 preview-members=Önizleme üyeler (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Segmentleri (Automatic Translation)
 segments-asah-connector-configuration-name=Segmentler Analytics bulutu (Automatic Translation)
 segments-service-configuration-name=Segmentlere hizmet (Automatic Translation)
 select-experience=Deneyim Seç (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Analytics bulut (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Test adı (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Segment-ebil değil bulunmak. (Automatic Translat
 there-are-no-segments=Hiçbir kesimleri vardır. (Automatic Translation)
 untitled-segment=Adsız segment (Automatic Translation)
 user-segment=Kullanıcı kesimi (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
