--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_uk.properties
@@ -12,9 +12,12 @@ contributor.context=Сесія (Automatic Translation)
 contributor.user=Користувач (Automatic Translation)
 contributor.user-organization=Організація (Automatic Translation)
 create-new-test=Створити новий тест (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Створити тест (Automatic Translation)
 create-test-error=Під час створення тесту A/B сталася неочікувана помилка. (Automatic Translation)
 create-test-help-message=Створіть новий тест A/B для оптимізації вашої сторінки або досвіду. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Критерії (Automatic Translation)
 criteria-cancel-confirmation-message=Є незбережені зміни. Ви дійсно бажаєте вийти? (Automatic Translation)
 criteria-error-message-edit=Видалити цю умову. Вона була створена з настроюваного поля, яке більше не існує. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Для вибраного досвіду не знайдено жодних активних тестів. (Automatic Translation)
 no-segments-have-been-added-yet=Жодних сегментів ще не додано. Щоб додати новий сегмент перейти до меню продукту > люди > сегменти. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Немає користувачів були призначені для цього сегменту. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Не містить (Automatic Translation)
 not-equals=Не дорівнює (Automatic Translation)
 preview-members=Попередній перегляд членів (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Сегменти (Automatic Translation)
 segments-asah-connector-configuration-name=Сегменти Analytics хмара (Automatic Translation)
 segments-service-configuration-name=Сегменти служби (Automatic Translation)
 select-experience=Виберіть досвід (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Аналітика хмара (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Назва тесту (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Сегмент не знайдено. (Automatic 
 there-are-no-segments=Там не містить сегментів. (Automatic Translation)
 untitled-segment=Сегмент без назви (Automatic Translation)
 user-segment=Користувач сегмент (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
