--- a/modules/apps/segments/segments-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/segments/segments-lang/src/main/resources/content/Language_vi.properties
@@ -12,9 +12,12 @@ contributor.context=Phiên làm việc (Automatic Translation)
 contributor.user=Người sử dụng (Automatic Translation)
 contributor.user-organization=Tổ chức (Automatic Translation)
 create-new-test=Tạo thử nghiệm mới (Automatic Translation)
+create-new-variant=Create New Variant (Automatic Copy)
 create-test=Tạo thử nghiệm (Automatic Translation)
 create-test-error=Lỗi bất ngờ xảy ra khi tạo thử nghiệm A/B. (Automatic Translation)
 create-test-help-message=Tạo thử nghiệm A/B mới để tối ưu hóa trang hoặc trải nghiệm của bạn. (Automatic Translation)
+create-variant=Create Variant (Automatic Copy)
+create-variant-error-message=An unexpected error occurred while creating the variant. (Automatic Copy)
 criteria=Tiêu chí (Automatic Translation)
 criteria-cancel-confirmation-message=Có những thay đổi chưa được lưu. Bạn có chắc bạn muốn ra khỏi không? (Automatic Translation)
 criteria-error-message-edit=Xoá bỏ tình trạng này. Nó được tạo ra từ một trường tuỳ chỉnh không còn tồn tại. (Automatic Translation)
@@ -82,6 +85,7 @@ new-x-segment=New {0} Segment (Automatic Copy)
 no-active-tests-were-found-for-the-selected-experience=Không tìm thấy bài kiểm tra hoạt động nào cho trải nghiệm đã chọn. (Automatic Translation)
 no-segments-have-been-added-yet=Không có phân đoạn nào được thêm vào. Để thêm phân đoạn mới, hãy chuyển đến menu sản phẩm > mọi người > phân đoạn. (Automatic Translation)
 no-users-have-been-assigned-to-this-segment=Không có người sử dụng đã được giao cho phân khúc này. (Automatic Translation)
+no-variants-have-been-created-for-this-test=No variants have been created for this test. (Automatic Copy)
 not-contains=Không chứa (Automatic Translation)
 not-equals=Không bằng (Automatic Translation)
 preview-members=Xem trước các thành viên (Automatic Translation)
@@ -93,6 +97,7 @@ segments=Phân đoạn (Automatic Translation)
 segments-asah-connector-configuration-name=Phân đoạn đám mây Analytics (Automatic Translation)
 segments-service-configuration-name=Dịch vụ phân đoạn (Automatic Translation)
 select-experience=Chọn trải nghiệm (Automatic Translation)
+show-actions=Show Actions (Automatic Copy)
 source.analytics-cloud=Phân tích đám mây (Automatic Translation)
 source.dxp=DXP (Automatic Translation)
 test-name=Tên kiểm tra (Automatic Translation)
@@ -102,6 +107,9 @@ the-segment-could-not-be-found=Không tìm thấy các phân đoạn. (Automatic
 there-are-no-segments=Không có không phân đoạn. (Automatic Translation)
 untitled-segment=Phân đoạn chưa có tiêu đề (Automatic Translation)
 user-segment=Phân khúc người dùng (Automatic Translation)
+variant-control=Control (Automatic Copy)
+variants=Variants (Automatic Copy)
+variants-help=Create at least one variant to run the test. (Automatic Copy)
 x-member={0} Member (Automatic Copy)
 x-members={0} Members (Automatic Copy)
 x-properties={0} Properties (Automatic Copy)
